--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Great+Vibes|Montserrat:300,400,500,600" as="style" onload="this.rel='stylesheet'">
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,6 +31,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="modal"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
