--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, height=device-height">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="mobile portfolio, mobile portfolio site">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+ <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
